--- a/myface-onface-html/src/assets/less/style/page/myface-user.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-user.less
@@ -61,5 +61,13 @@
 		    content: "/\00a0";
 			}
 		}
+		&:last-child {
+			a {
+				max-width: 160px;
+		    overflow: hidden;
+		    text-overflow: ellipsis;
+		    white-space: nowrap;
+			}
+		}
 	}
 }
