--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -134,37 +134,37 @@
                 <div class="product-intro" id="m-product-des-2">
                   <a class="icon intro-action" href="javascript:void(0)"></a>
                   <h2 class="title">Thông số sản phẩm</h2>
-                  <table class="table table-bordered table-label">
+                  <table>
                     <tbody>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Độ cồn</strong></td>
                         <td>5%</td>
                       </tr>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Xuất xứ</strong></td>
                         <td>Việt Nam</td>
                       </tr>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Hướng dẫn sử dụng</strong></td>
                         <td>Uống trực tiếp, ngon hơn khi uống lạnh</td>
                       </tr>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Hướng dẫn bảo quản</strong></td>
                         <td>Nơi khô ráo, thoáng mát, tránh ánh nắng mặt trời và tránh bị đông đá</td>
                       </tr>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Quy cách đóng gói</strong></td>
                         <td>24 lon/thùng</td>
                       </tr>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Thành phần nguyên liệu</strong></td>
                         <td>Nước, mạch nha, gạo, hoa bia</td>
                       </tr>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Hạn sử dụng</strong></td>
                         <td>12 tháng</td>
                       </tr>
-                      <tr class="row-info">
+                      <tr>
                         <td><strong>Dung tích</strong></td>
                         <td>330 (ml)</td>
                       </tr>
