--- a/myface-onface-html/src/views/user-account-address-book.html
+++ b/myface-onface-html/src/views/user-account-address-book.html
@@ -57,8 +57,8 @@
 				          </div>
 						    </li>
 						    <li class="col-md-6">
-						    	<button class="btn pull-right">
-						    		Đặt làm mặc định
+						    	<button class="btn add-default-btn default">
+						    		Mặc định
 					    		</button>
 						    </li>
 						  </ul>
@@ -93,7 +93,7 @@
 				          </div>
 						    </li>
 						    <li class="col-md-6">
-						    	<button class="btn pull-right">
+						    	<button class="btn add-default-btn">
 						    		Đặt làm mặc định
 					    		</button>
 						    </li>
