--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -60,7 +60,7 @@
   }
   .icon {
   	&:before {
-  		content: "\f104";		
+  		content: "\f104";
   		font-size: 28px;
   	}
   }
@@ -87,7 +87,7 @@
   width: 100%;
   height: 50px;
   float: left;
-  margin-bottom: 40px; 
+  margin-bottom: 40px;
   border-bottom: @border;
   ul {
   	list-style: none;
@@ -97,7 +97,7 @@
 	text-align: center;
 	padding: 0;
 	margin: 0 auto;
-	
+
 }
 .tab-item {
 	position: relative;
@@ -172,7 +172,7 @@
 	}
 	&::-webkit-scrollbar-track {
 	  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	} 
+	}
 	&::-webkit-scrollbar-thumb {
 	  background-color: #949393;
 	  border-radius: 4px;
@@ -194,6 +194,9 @@
 		background-color: @primary-color;
 		border-color: @primary-color;
 	}
+    @media (max-width: @screen-sm-max) {
+        width: 100%;
+    }
 }
 
 /*myface-shop-list*/
@@ -227,15 +230,15 @@
 		}
 	}
 	.icon-links {
-		width: 100%; 
-		position: relative; 
-		bottom: none; 
-		right: none; 
+		width: 100%;
+		position: relative;
+		bottom: none;
+		right: none;
 		overflow: hidden;
 		.icon-text {
 			display: none;
 		}
-	}	
+	}
 	.shop-name {
 		padding: 0;
 		a {
@@ -246,10 +249,10 @@
 		}
 	}
 	.shop-img {
-		width:auto; 
-		height:auto; 
-		position: absolute; 
-		top: 0; 
+		width:auto;
+		height:auto;
+		position: absolute;
+		top: 0;
 		left: 0;
 	}
 }
@@ -268,12 +271,12 @@
 	padding: 0 15px;
 	overflow: hidden;
 	.m-product-list {
-		white-space: nowrap; 
-		position:static; 
-		overflow: hidden; 
+		white-space: nowrap;
+		position:static;
+		overflow: hidden;
 	}
 	.m-product-item {
-		float: none; 
+		float: none;
 		display: inline-block;
 		padding: 0;
 	}
