--- a/myface-onface-html/src/views/user-account-change-password.html
+++ b/myface-onface-html/src/views/user-account-change-password.html
@@ -32,7 +32,7 @@
               <label for="" class="error">Vui lòng nhập đủ thông tin</label>
             </div>
             <div class="form-group p-group-1">
-	            <input type="submit" class="btn btn-primary update-p-form-btn" value="Thay đổi mật khẩu">
+	            <input type="submit" class="btn btn-primary update-p-form-btn" value="Thay đổi mật khẩu" data-toggle="modal" data-target="#alert-modal">
             </div>
 		    	</div>
 	    	</div><!--/.form-horizontal-->
