--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -1882,6 +1882,20 @@ select.selectpicker {
   padding: 15px 0;
   margin-bottom: 0;
 }
+@media (max-width: 1199px) {
+  .header-row-1 .open .dropdown-menu {
+    position: absolute;
+    background-color: #fff;
+    top: 40px;
+    right: -35px;
+    -webkit-box-shadow: 0 2px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.175);
+  }
+  .header-row-1 .open .login-dropdown li a {
+    line-height: 1.25;
+    padding: 0;
+  }
+}
 .myfaceshop-logo {
   width: 130px;
   position: relative;
@@ -2021,6 +2035,19 @@ select.selectpicker {
   left: auto;
   right: 0;
   width: auto;
+  width: 203px;
+}
+.account-dropdown li a {
+  padding: 4px 15px;
+  color: #727272;
+}
+.account-dropdown li:last-child:before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  display: block;
+  margin: 3px 0;
+  border-top: 1px solid #dfdfdf;
 }
 .login-dropdown {
   top: 23px;
@@ -2028,7 +2055,7 @@ select.selectpicker {
   right: 0;
   width: 280px;
   height: 370px;
-  padding: 15px;
+  padding: 17px 10px;
   border-top-right-radius: 3px !important;
   border-top-left-radius: 3px !important;
   border: 1px solid #dfdfdf;
@@ -2047,6 +2074,35 @@ select.selectpicker {
 }
 .login-dropdown li .lg-button {
   width: 100%;
+}
+.login-dropdown .form-title {
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+.login-dropdown .lg-divider {
+  height: 1px;
+  width: 50px;
+  margin: 20px auto;
+  border-top: 1px dotted #dfdfdf;
+}
+.login-dropdown .form-group {
+  margin-bottom: 13px;
+}
+.login-dropdown .form-group input {
+  height: 40px;
+}
+.login-dropdown .lg-row-4 {
+  margin-bottom: 20px;
+}
+.login-dropdown .lg-row-5 {
+  margin-bottom: 17px;
+}
+.login-dropdown .lg-a-text {
+  font-weight: 600;
+  text-decoration: underline;
+}
+.login-dropdown .lg-a-text:hover {
+  text-decoration: none;
 }
 .account-img {
   width: 38px;
