--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -4,7 +4,7 @@
   	<!--footer-row-1-->
     <div class="footer-row-1">
       <div class="row">
-      	<div class="col-xs-6 col-md-3 f-block-1">
+      	<div class="col-sm-6 col-md-3 f-block-1">
           <ul class="list-group">
             <li class="li-item f-logo">
               <a href="#"><img class="" src="assets/images/logo/logo.png" alt="myface"></a>
@@ -21,7 +21,7 @@
             </li>
           </ul>
       	</div>
-      	<div class="col-xs-6 col-md-2 f-block-2">
+      	<div class="col-sm-6 col-md-2 f-block-2">
       		<ul class="list-group">
             <li class="li-item f-phone">
               <a href="tel:1900636798">
@@ -47,7 +47,7 @@
             </li>
     			</ul>
       	</div>
-      	<div class="col-xs-6 col-md-2 f-block-3">
+      	<div class="col-sm-6 col-md-2 f-block-3">
       		<ul class="list-group">
             <li class="li-item f-title">Hỗ trợ người mua</li>
             <li class="li-item">
@@ -67,7 +67,7 @@
             </li>
           </ul>
       	</div>
-      	<div class="col-xs-6 col-md-2 f-block-4">
+      	<div class="col-sm-6 col-md-2 f-block-4">
       		<ul class="list-group">
             <li class="li-item f-title">Dành cho người bán</li>
             <li class="li-item">
@@ -87,7 +87,7 @@
             </li>
           </ul>
       	</div>
-      	<div class="col-xs-6col-md-3 f-block-5">
+      	<div class="col-sm-6 col-md-3 f-block-5">
       		<ul class="list-group">
             <li class="li-item f-title">Kết nối myFace</li>
             <li class="li-item">
