--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -96,7 +96,7 @@
                 </div>
                 <span class="slider-control slider-next"><i class="fa fa-angle-right"></i></span>
               </div>
-            </div>  <!--./stage-wrap--> 
+            </div>  <!--./stage-wrap-->
 
             <!--product-detail-->
             <div class="product-detail">
@@ -132,45 +132,47 @@
                 </div>
 
                 <div class="product-intro" id="m-product-des-2">
-                  <a class="icon intro-action" href="javascript:void(0)"></a>
+                  <a class="icon intro-action" role="button" data-toggle="collapse" data-target="#product-des-2"></a>
                   <h2 class="title">Thông số sản phẩm</h2>
-                  <table>
-                    <tbody>
-                      <tr>
-                        <td><strong>Độ cồn</strong></td>
-                        <td>5%</td>
-                      </tr>
-                      <tr>
-                        <td><strong>Xuất xứ</strong></td>
-                        <td>Việt Nam</td>
-                      </tr>
-                      <tr>
-                        <td><strong>Hướng dẫn sử dụng</strong></td>
-                        <td>Uống trực tiếp, ngon hơn khi uống lạnh</td>
-                      </tr>
-                      <tr>
-                        <td><strong>Hướng dẫn bảo quản</strong></td>
-                        <td>Nơi khô ráo, thoáng mát, tránh ánh nắng mặt trời và tránh bị đông đá</td>
-                      </tr>
-                      <tr>
-                        <td><strong>Quy cách đóng gói</strong></td>
-                        <td>24 lon/thùng</td>
-                      </tr>
-                      <tr>
-                        <td><strong>Thành phần nguyên liệu</strong></td>
-                        <td>Nước, mạch nha, gạo, hoa bia</td>
-                      </tr>
-                      <tr>
-                        <td><strong>Hạn sử dụng</strong></td>
-                        <td>12 tháng</td>
-                      </tr>
-                      <tr>
-                        <td><strong>Dung tích</strong></td>
-                        <td>330 (ml)</td>
-                      </tr>
-                    </tbody>
-                  </table><!-- /.table -->
-                </div>    
+                  <div id="product-des-2" class="collapse in">
+                    <table>
+                      <tbody>
+                        <tr>
+                          <td><strong>Độ cồn</strong></td>
+                          <td>5%</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Xuất xứ</strong></td>
+                          <td>Việt Nam</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Hướng dẫn sử dụng</strong></td>
+                          <td>Uống trực tiếp, ngon hơn khi uống lạnh</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Hướng dẫn bảo quản</strong></td>
+                          <td>Nơi khô ráo, thoáng mát, tránh ánh nắng mặt trời và tránh bị đông đá</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Quy cách đóng gói</strong></td>
+                          <td>24 lon/thùng</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Thành phần nguyên liệu</strong></td>
+                          <td>Nước, mạch nha, gạo, hoa bia</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Hạn sử dụng</strong></td>
+                          <td>12 tháng</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Dung tích</strong></td>
+                          <td>330 (ml)</td>
+                        </tr>
+                      </tbody>
+                    </table><!-- /.table -->
+                  </div>
+                </div>
               </div>
             </div><!--product-detail-->
 
@@ -194,7 +196,7 @@
                 <div class="add-number-to-buy like-box">
                   <ul class="icon-tools">
                   	<li class="m-like"><a href=""><span class="icon i-like"></span><span class="icon-text">Thích &lt;3</span></a></li>
-                  	<li class="m-pin"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></a></li>     
+                  	<li class="m-pin"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></a></li>
                   	<li class="m-buy"><a href=""><span class="icon i-cart"></span><span class="icon-text">Thêm vào giỏ</span></a></li>
                     <li class="buy-now"><button class="btn btn-primary btn-number-action" type="button"><span class="icon"></span>Mua liền<span class="icon"><i class="fa fa-arrow-right" aria-hidden="true"></i></span></button></li>
                   </ul>
@@ -238,7 +240,7 @@
             <div class="info-block view-block">
               <ul class="icon-tools">
                 <li class="m-like"><span class="icon i-like">789</span><span class="icon-text">thích</span></li>
-                <li class="m-pin"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></li>     
+                <li class="m-pin"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></li>
                 <li class="m-buy pull-right"><span class="icon i-buy">123</span><span class="icon-text">mua</span></li>
               </ul>
             </div>
@@ -246,7 +248,7 @@
             <div class="info-block price-block">
               <span class="price current">235.000<sup>đ</sup></span>
               <span class="price shipping">(Miễn phí vận chuyển)</span>
-              <span class="price original">325.000<sup>đ</sup></span> 
+              <span class="price original">325.000<sup>đ</sup></span>
             </div><!--/.price-block-->
             <!--product-property-->
             <div class="product-property mf-product-property">
@@ -344,15 +346,15 @@
             	<label class="block-title"><a href="#">Sản phẩm tương tự của Shop</a></label>
               <div class="row shop-list-row">
                 <ol class="m-product-list">
-                  {% for x in [1,2,3,4] %}  
+                  {% for x in [1,2,3,4] %}
                   <!--m-product-item-->
                   <li class="col-xs-6 m-product-item">
                     <div class="m-product-inner">
                       <div class="m-product-info">
                         <a class="m-product-link" href="myface-product-detail.html">
                           <figure class="m-product-img">
-                            <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">    
-                          </figure> 
+                            <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">
+                          </figure>
                         </a>
                       </div>
                     </div>
