--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -365,6 +365,19 @@
 		overflow: visible;
 	}
 }
+.breadcrumbs-nav {
+    .navbar {
+        min-width: 0;
+        position: relative;
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+        white-space: nowrap;
+        width: 100%;
+        -ms-overflow-style: none;
+        overflow-y: -moz-scrollbars-none;
+    }
+}
 .cate-list {
 	margin: 0;
 	.cate-item {
