--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -115,6 +115,7 @@ img {
   right: 30px;
   bottom: 20px;
   display: none;
+  z-index: 9;
 }
 .fixed-block .cart-block,
 .fixed-block .back-to-top {
@@ -2223,6 +2224,31 @@ select.selectpicker {
   -ms-overflow-style: none;
   overflow-y: -moz-scrollbars-none;
 }
+@media (max-width: 991px) {
+  .shopper-menu .navbar {
+    min-width: 0;
+    height: auto;
+  }
+  .shopper-menu .navbar .tabs-menu {
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+    width: 100%;
+    -ms-overflow-style: none;
+    overflow-y: -moz-scrollbars-none;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .shopper-menu .navbar .tabs-menu .tab-item:first-child {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .shopper-menu .navbar .tabs-menu.pull-right {
+    float: left !important;
+  }
+}
 .cate-list {
   margin: 0;
 }
@@ -3920,10 +3946,17 @@ h2.shop-name .shop-name-text {
   float: left;
 }
 .catebar .cate-list {
-  width: 100%;
   height: 90px;
   text-align: center;
   overflow: hidden;
+  position: relative;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+  width: 100%;
+  -ms-overflow-style: none;
+  overflow-y: -moz-scrollbars-none;
 }
 .catebar .cate-item {
   margin-right: 20px;
@@ -3982,6 +4015,11 @@ h2.shop-name .shop-name-text {
 .filterbar .filter-property {
   float: right;
   margin-right: -12px;
+}
+@media (max-width: 1199px) {
+  main .filterbar {
+    display: none;
+  }
 }
 .tab-single a {
   font-weight: normal;
@@ -4954,6 +4992,15 @@ h2.shop-name .shop-name-text {
   background: #3a5897;
   border-color: #3a5897;
   color: #fff;
+}
+.login-main .tab-item > a {
+  text-transform: none;
+}
+@media (max-width: 767px) {
+  .login-main {
+    margin-top: 0;
+    border: 0;
+  }
 }
 .tabs-login {
   padding: 0;
