--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -28,7 +28,7 @@ main {
   width: 100%;
   display: block;
 }
-footer {  
+footer {
 }
 /* H1 - H6 font */
 h1,
@@ -72,8 +72,8 @@ a:focus {
 }
 label.error {
   color: @red;
-  font-size: 11px;   
-  font-weight: normal;        
+  font-size: 11px;
+  font-weight: normal;
   padding: 0;
   margin: 0;
   display: none;
@@ -118,6 +118,7 @@ img {
   right: 30px;
   bottom: 20px;
   display: none;
+  z-index: 9;
   .cart-block,
   .back-to-top {
     width: 40px;
