--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -6,7 +6,7 @@
 		margin-bottom: 20px;
 	}
 }
-.mf-product-content {	
+.mf-product-content {
 	border: @border;
 	border-radius: 3px;
 }
@@ -98,7 +98,7 @@
 				display: inline-block;
 				margin-top: 3px;
 			}
-		}	
+		}
 		&.pin-block {
 			padding-bottom: 20px;
 		}
@@ -111,7 +111,7 @@
 			color: @primary-color;
 			text-decoration: none;
 		}
-	}	
+	}
 	.safe-block {
 		border-bottom: 0;
 	}
@@ -241,8 +241,8 @@
 	}
 }
 .lightbox-2 {
-	width: 100%; 
-	padding: 0 15px; 
+	width: 100%;
+	padding: 0 15px;
 	top: auto;
 	bottom: 60px;
 	.close-back {
@@ -251,8 +251,8 @@
 	}
 }
 .like-box {
-	width: 490px; 
-	float: left; 
+	width: 490px;
+	float: left;
 	margin-top: 10px;
 	li {
 		margin-right: 15px;
@@ -393,6 +393,9 @@
     	text-align: right;
     }
 	}
+    @media (max-width: @screen-sm-max) {
+        display: none;
+    }
 }
 .close-back {
 	width: auto;
