--- a/myface-onface-html/src/views/user-account-order-info.html
+++ b/myface-onface-html/src/views/user-account-order-info.html
@@ -38,7 +38,7 @@
 								<th class="">Mã đơn hàng</th>
 								<th class="">Ngày đặt hàng</th>
 								<th class="">Sản phẩm mua</th>
-								<th class="">Tổng thanh toán</th>					
+								<th class="">Tổng thanh toán</th>
 								<th class="">Trạng thái đơn hàng</th>
 							</tr>
 						</thead>
@@ -47,7 +47,7 @@
 							<tr>
 								<td><a href="user-account-order-details.html" class="">#12486578929</a></td>
 								<td><span>04/11/2015</span></td>
-								<td><span>Bộ 3 nồi thủy tinh Amberline Luminarc</span></td>
+								<td class="col-md-4"><span>Bộ 3 nồi thủy tinh Amberline Luminarc</span></td>
 								<td>
 									<span>1.000.000</span>
 								</td>
