--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -160,3 +160,13 @@ img {
 .navbar {
 	border-radius: 0;
 }
+.touch-slide {
+    width: 100%;
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+    -ms-overflow-style: none;
+    overflow-y: -moz-scrollbars-none;
+}
