--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -9,6 +9,10 @@
 .mf-product-content {
 	border: @border;
 	border-radius: 3px;
+    @media (max-width: @screen-xs-max) {
+        border: 0;
+        padding: 0;
+    }
 }
 .mf-product-info-block {
 	padding-top: 0;
@@ -45,6 +49,19 @@
 				}
 			}
 		}
+        @media (max-width: @screen-xs-max) {
+            padding-right: 0;
+        }
+        @media (max-width: @screen-sm-max) {
+            .thumnail-inner {
+                width: 100%;
+                height: 50px;
+                .touch-slide;
+                .items {
+                    top: 0;
+                }
+            }
+        }
 	}
 	.product-detail {
 		width: 100%;
@@ -148,6 +165,7 @@
 .shipping-block {
 	position: relative;
 	.shipping-action {
+        display: block;
 		position: absolute;
 		bottom: 10px;
 		right: 0;
@@ -285,6 +303,10 @@
 		width: 100%;
 		height: auto;
 	}
+    @media (max-width: @screen-xs-max) {
+        padding: 0;
+        border: 0;
+    }
 }
 .block-text {
 	margin-bottom: 0;
@@ -340,11 +362,17 @@
 		font-size: 25px;
 		display: inline;
 		margin-right: 10px;
+        @media (max-width: @screen-sm-max) {
+            font-size: 18px;
+        }
 	}
 }
 .product-date {
 	display: inline-block;
 	color: @text-color-2;
+    @media (max-width: @screen-sm-max) {
+        font-size: 12px;
+    }
 }
 .alert-box {
 	width: 100%;
@@ -410,9 +438,15 @@
 	height: 46px;
 	display: block;
 	background: url(../images/icons/close.png) no-repeat;
+    background-size: 100% 100%;
 	&:hover {
 		background: url(../images/icons/close-hover.png) no-repeat;
+        background-size: 100% 100%;
 	}
+    @media (max-width: @screen-sm-max) {
+        width: 32px;
+        height: 32px;
+    }
 }
 .shop-list-row {
 	.m-product-item {
