--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -31,6 +31,7 @@
 //BLOCKS
 //------
 @import "block/header.less";
+@import "block/icon.less";
 @import "block/footer.less";
 @import "block/product-info-block.less";
 @import "block/invoice.less";
