--- a/myface-onface-html/src/views/block/_header-row-2.html
+++ b/myface-onface-html/src/views/block/_header-row-2.html
@@ -1,67 +1,46 @@
 <div class="header-row-2 mf-cate-nav">
 	<nav class="container navbar category-nav">
 		<ul class="nav navbar-nav cate-list">
-		  <li class="cate-item cate-1">
+		  <li class="cate-item cate-tt">
 		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
-		    	<span class="cate-name">Mỹ phẩm</span>
+		    	<span class="cate-name">thời trang</span>
 		    </a>
 		  </li>
-		  <li class="cate-item cate-2">
+		  <li class="cate-item cate-mb">
 		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
-		    	<span class="cate-name">Điện tử</span>
+		    	<span class="cate-name">mẹ & bé</span>
 		    </a>
 		  </li>
-		  <li class="cate-item cate-3">
+		  <li class="cate-item cate-dtlk">
 		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
-		    	<span class="cate-name">Thời trang</span>
+		    	<span class="cate-name">điện thoại & linh kiện</span>
 		    </a>
 		  </li>
-		  <li class="cate-item cate-4">
+		  <li class="cate-item cate-lt">
 		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
-		    	<span class="cate-name">Gia dụng</span>
+		    	<span class="cate-name">Laptop</span>
 		    </a>
 		  </li>
-		  <li class="cate-item cate-5">
+		  <li class="cate-item cate-mp">
 		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
-		    	<span class="cate-name">Sức khỏe</span>
+		    	<span class="cate-name">mỹ phẩm</span>
 		    </a>
 		  </li>
-		  <li class="cate-item cate-6">
+		  <li class="cate-item cate-htd">
 		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
-		    	<span class="cate-name">Thực phẩm</span>
-		    </a>
-		  </li>
-		  <li class="cate-item cate-7">
-		    <a class="" href="myface-category-1.html">
-		    	<span class="cate-icon">
-		    	</span>
-		    	<span class="cate-name">Sách - VPP</span>
-		    </a>
-		  </li>
-		  <li class="cate-item cate-8">
-		    <a class="" href="myface-category-1.html">
-		    	<span class="cate-icon">
-		    	</span>
-		    	<span class="cate-name">Mẹ & Bé</span>
-		    </a>
-		  </li>
-		  <li class="cate-item cate-9">
-		    <a class="" href="myface-category-1.html">
-		    	<span class="cate-icon">
-		    	</span>
-		    	<span class="cate-name">Đồ chơi</span>
+		    	<span class="cate-name">hàng tiêu dùng</span>
 		    </a>
 		  </li>
 		</ul>
