--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -1885,7 +1885,6 @@ select.selectpicker {
   display: none;
 }
 .header-row-1 {
-  border-bottom: 1px solid #dfdfdf;
   height: 70px;
 }
 .header-row-1 .navbar {
@@ -2181,7 +2180,6 @@ select.selectpicker {
   width: 100%;
   height: 60px;
   background-color: #f0f1f3;
-  border-bottom: 1px solid #dfdfdf;
   margin-bottom: 20px;
 }
 .header-row-2 .navbar {
@@ -2285,64 +2283,10 @@ select.selectpicker {
 .cate-list .cate-item .cate-name {
   font-weight: 600;
   color: #727272;
+  text-transform: lowercase;
 }
-.cate-icon {
-  width: 100%;
-  height: 30px;
-  margin-bottom: 2px;
-  background: url(../images/icons/cate-icon/1.png) no-repeat center center;
-  background-size: auto 100%;
-}
-.cate-item > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/1-hover.png) no-repeat center center;
-}
-.cate-item.cate-2 .cate-icon {
-  background: url(../images/icons/cate-icon/2.png) no-repeat center center;
-}
-.cate-item.cate-2 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/2-hover.png) no-repeat center center;
-}
-.cate-item.cate-3 .cate-icon {
-  background: url(../images/icons/cate-icon/3.png) no-repeat center center;
-}
-.cate-item.cate-3 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/3-hover.png) no-repeat center center;
-}
-.cate-item.cate-4 .cate-icon {
-  background: url(../images/icons/cate-icon/4.png) no-repeat center center;
-}
-.cate-item.cate-4 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/4-hover.png) no-repeat center center;
-}
-.cate-item.cate-5 .cate-icon {
-  background: url(../images/icons/cate-icon/5.png) no-repeat center center;
-}
-.cate-item.cate-5 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/5-hover.png) no-repeat center center;
-}
-.cate-item.cate-6 .cate-icon {
-  background: url(../images/icons/cate-icon/6.png) no-repeat center center;
-}
-.cate-item.cate-6 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/6-hover.png) no-repeat center center;
-}
-.cate-item.cate-7 .cate-icon {
-  background: url(../images/icons/cate-icon/7.png) no-repeat center center;
-}
-.cate-item.cate-7 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/7-hover.png) no-repeat center center;
-}
-.cate-item.cate-8 .cate-icon {
-  background: url(../images/icons/cate-icon/8.png) no-repeat center center;
-}
-.cate-item.cate-8 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/8-hover.png) no-repeat center center;
-}
-.cate-item.cate-9 .cate-icon {
-  background: url(../images/icons/cate-icon/9.png) no-repeat center center;
-}
-.cate-item.cate-9 > a:hover .cate-icon {
-  background: url(../images/icons/cate-icon/9-hover.png) no-repeat center center;
+.cate-list .cate-item .cate-name:first-letter {
+  text-transform: uppercase;
 }
 .promotion-list {
   float: right;
@@ -2371,6 +2315,122 @@ select.selectpicker {
   .navbar-nav > li.promotion-item {
     display: inline-block;
   }
+}
+.cate-icon {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 2px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: auto 100%;
+}
+/*cate thời trang*/
+.cate-tt .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt.png);
+}
+.cate-tt > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-hover.png);
+}
+.cate-tt-nam .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-nam.png);
+}
+.cate-tt-nam > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-nam-hover.png);
+}
+.cate-tt-nu .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-nu.png);
+}
+.cate-tt-nu > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-nu-hover.png);
+}
+.cate-tt-capdoi .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-capdoi.png);
+}
+.cate-tt-capdoi > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-capdoi-hover.png);
+}
+.cate-tt-bau .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-bau.png);
+}
+.cate-tt-bau > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-bau-hover.png);
+}
+.cate-tt-treem .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-treem.png);
+}
+.cate-tt-treem > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-treem-hover.png);
+}
+.cate-tt-phukien .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-phukien.png);
+}
+.cate-tt-phukien > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-phukien-hover.png);
+}
+.cate-tt-trangsuc .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-trangsuc.png);
+}
+.cate-tt-trangsuc > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/tt-trangsuc-hover.png);
+}
+/*cate mẹ bé*/
+.cate-mb .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb.png);
+}
+.cate-mb > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb-hover.png);
+}
+.cate-mb-dodungbe .cate-icon {
+  background-image: url(../images/icons/cate-icon/mp-dodungbe.png);
+}
+.cate-mb-dodungbe > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/mp-dodungbe-hover.png);
+}
+.cate-mb-dochoibe .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb.png);
+}
+.cate-mb-dochoibe > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb-hover.png);
+}
+.cate-mb-thucphambe .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb-thucphambe.png);
+}
+.cate-mb-thucphambe > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb-thucphambe-hover.png);
+}
+.cate-mb-dome .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb-dome.png);
+}
+.cate-mb-dome > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/mb-dome-hover.png);
+}
+/*cate điện tử - linh kiện*/
+.cate-dtlk .cate-icon {
+  background-image: url(../images/icons/cate-icon/dtlk.png);
+}
+.cate-dtlk > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/dtlk-hover.png);
+}
+/*cate laptop*/
+.cate-lt .cate-icon {
+  background-image: url(../images/icons/cate-icon/lt.png);
+}
+.cate-lt > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/lt-hover.png);
+}
+/*cate mỹ phẩm*/
+.cate-mp .cate-icon {
+  background-image: url(../images/icons/cate-icon/mp.png);
+}
+.cate-mp > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/mp-hover.png);
+}
+/*cate hàng tiêu dùng*/
+.cate-htd .cate-icon {
+  background-image: url(../images/icons/cate-icon/htd.png);
+}
+.cate-htd > a:hover .cate-icon {
+  background-image: url(../images/icons/cate-icon/htd-hover.png);
 }
 footer.text-center {
   width: 100%;
