--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -1,5 +1,4 @@
 .header-row-1 {
-	border-bottom: @border;
 	height: 70px;
 	.navbar {
 		height: 70px;
@@ -323,7 +322,6 @@
 	width: 100%;
 	height: 60px;
 	background-color: @bg-color-3;
-	border-bottom: @border;
 	margin-bottom: 20px;
 	.navbar {
 		min-width: 1170px;
@@ -433,118 +431,10 @@
 		.cate-name {
 			font-weight: 600;
 			color: @text-color-2;
-		}
-	}
-}
-.cate-icon {
-	width: 100%;
-  height: 30px;
-  margin-bottom: 2px;
-  background: url(../images/icons/cate-icon/1.png) no-repeat center center;
-  background-size: auto 100%;
-}
-.cate-item {
-	> a {
-		&:hover {
-			.cate-icon {
-				background: url(../images/icons/cate-icon/1-hover.png) no-repeat center center;
-			}
-		}
-	}
-	&.cate-2 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/2.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/2-hover.png) no-repeat center center;
-				}
-			}
-		}
-	}
-	&.cate-3 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/3.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/3-hover.png) no-repeat center center;
-				}
-			}
-		}
-	}
-	&.cate-4 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/4.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/4-hover.png) no-repeat center center;
-				}
-			}
-		}
-	}
-	&.cate-5 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/5.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/5-hover.png) no-repeat center center;
-				}
-			}
-		}
-	}
-	&.cate-6 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/6.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/6-hover.png) no-repeat center center;
-				}
-			}
-		}
-	}
-	&.cate-7 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/7.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/7-hover.png) no-repeat center center;
-				}
-			}
-		}
-	}
-	&.cate-8 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/8.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/8-hover.png) no-repeat center center;
-				}
-			}
-		}
-	}
-	&.cate-9 {
-		.cate-icon {
-			background: url(../images/icons/cate-icon/9.png) no-repeat center center;
-		}
-		> a {
-			&:hover {
-				.cate-icon {
-					background: url(../images/icons/cate-icon/9-hover.png) no-repeat center center;
-				}
-			}
+            text-transform: lowercase;
+            &:first-letter {
+                text-transform: uppercase;
+            }
 		}
 	}
 }
